--- a/Rozov_OOP/Rozov_OOP/Rozov_OOP.vcxproj
+++ b/Rozov_OOP/Rozov_OOP/Rozov_OOP.vcxproj
@@ -127,10 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Group.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Student.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Group.h" />
     <ClInclude Include="Student.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
